[tool.poetry]
name = "quest"
version = "0.1.0"
description = ""
authors = ["Enzo Lebrun <enzo.the@gmail.com>"]
readme = "README.md"
packages = [
    { include = "quest" },
]


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
requests = "^2.32.3"
ipython = "^8.28.0"
click = "^8.1.7"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
